--- a/style.css
+++ b/style.css
@@ -6,70 +6,152 @@
   padding: 0px;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  /* border: 1px solid white; */
 }
 .container{
   width: 100vw;
   height: 100vh;
-  background-image: linear-gradient(135deg,#153677, #4e085f);
+ 
   overflow: hidden  ;
 }
-.todo-app{
- width: 500px;
- background-color: #fff;
- padding: 20px 50px;
- margin-inline: auto;
- margin-top: 100px;
- border-radius: 20px;
+.top-sec{
+  width: 100%;
+  height: 30%;
+  background-color: #000;
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
-.todo-app > h2
+
+
+.todo-app > h1
 {
- font-size: 25px;
- color: #473080;
- padding-inline: 10px;
- margin-bottom: 15px;
- font-weight: 600;
  display: flex;
+ justify-content: center;
  align-items: center;
  gap: 20px;
 }
+
+.todo-app h1 span{
+  font-size: 40px;
+  font-weight: 800;
+  color: #4ea8de;
+  
+}
 .row{
+  width: 40%;
   height: 45px;
+  margin: auto;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
+  gap: 10px;
   border: none;
   border-radius: 10px;
   overflow: hidden;
+  position: absolute;
+  bottom: -45px;
+  left:30%;
+  right: 30%;
 }
 .row > input{
   height: 100%;
   flex: 1;
   padding: 15px 15px;
   border: none;
-  border-radius: 10px 0px 0px 10px;
- background-color: #ededed98;;
- border: 1px solid #5555550f; 
+  border-radius:10px;
+  color: #565656;
+ background-color: #191919;
+ border: 1px solid #00000083; 
   outline:none;
  
 }
 ::placeholder{
-  color: #000;
+  color: #565656;
 }
 .row > button
 {
   height: 100%;
+  max-width: 80px;
   padding: 5px 25px;
-  border: 1px solid #ff8316f3;
+  border: none;
+  border-radius: 10px;
   color: #fff;
-  background-color: #ff8216;
+  font-size: 16px;
+  font-weight: 700;
+  background-color:#4ea8de;
   outline: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
  
+}
+.bottom-sec{
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  background-color: #191919;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.bottom-sec .sub-list-head{
+  width: 600px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+
+}
+.corner{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.sub-list-head .corner-text{
+  color: #4ea8de;
+  padding: 5px;
+  font-size: 16px;
+  font-weight: 500;
+}
+.sub-list-head .number{
+  width: 25px;
+  height: 25px;
+  font-size: 12px;
+  background-color: #262626;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+
+}
+.list-box{
+  width:600px;
+  height: 350px;
+  padding: 20px;
+  border: 1px solid #262626ab;
+  border-radius: 10px;
+}
+.list-box .no-item-text div {
+  padding-top: 50px;
+  color: #3d3b3b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 #list-container{
   width: 100%;
+  padding: 20px;
   max-height: 400px;
   height: fit-content;
+
+  /* background-color: aqua; */
   overflow-y: auto;
 }
 #list-container::-webkit-scrollbar
@@ -84,6 +166,8 @@ ul li{
   padding: 10px 50px 10px 45px;
   margin-bottom: 10px;
   word-wrap: break-word;
+  color: #ffffffe6;
+  background-color: #262626;
   border: 1px solid#55555537;
   border-radius: 10px;
   user-select: none;
@@ -99,12 +183,12 @@ ul li::before{
   height: 25px;
   width: 25px;
   border-radius: 50%;
-  background-image: url('assets/radio-button.png');
+  background-image: url('assets/radio.png');
   background-size: cover;
   background-position: center;
 }
 ul li.checked{
-  color: #ff8216;
+  color: #565656;
   text-decoration: line-through;
 }
 ul li.checked::before{
@@ -122,11 +206,11 @@ ul li span{
   font-size: 16px;
   border-radius: 50%;
   text-align: center;
-  background-color: #ff8216;
+  background-color:#4ea8de;
   color: #fff;
 }
 ul li span:hover{
-  background-color: #ff8400;
+  background-color:#4ea8de;
 
 }
 
