--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   overflow: hidden;
   position: absolute;
   bottom: -45px;
-  left:30%;
+  left: 30%;
   right: 30%;
 }
 .row > input{
@@ -214,10 +214,22 @@ ul li span:hover{
 
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:750px) {
   .todo-app{
     width: 400px;
   }
+  .row{
+    width: 70%;
+    left: 15%;
+    right: 15%;
+  }
+  .bottom-sec .sub-list-head{
+    width: 400px;
+  }
+  .list-box{
+    width: 400px;
+  }
+
 }
 
 @media screen and (max-width:450px) {
@@ -230,6 +242,12 @@ ul li span:hover{
   }
   .row > button{
     padding: 5px 10px;
+  }
+  .bottom-sec .sub-list-head{
+    width: 350px;
+  }
+  .list-box{
+    width: 350px;
   }
 }
 
