--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ ul li.checked::before{
   background-image: url(assets/checked.png);
   top: 12px;
 }
-ul li span{
+ul li .delete{
  
   position: absolute;
   right: 15px;
@@ -207,6 +207,17 @@ ul li span{
   border-radius: 50%;
   text-align: center;
   background-color:#4ea8de;
+  color: #fff;
+}
+
+.edit{
+  position: absolute;
+  right: 50px;
+  top: 10px;
+  padding-inline: 4px;
+  font-size: 16px;
+  border-radius: 50%;
+  text-align: center;
   color: #fff;
 }
 ul li span:hover{
